# herdr-telegram-slack-bridge

./: .gitignore  HERDR.md  LICENSE  README.md  herdr-plugin.toml  pyproject.toml
agent_telegram_bridge/: __init__.py  cli.py
scripts/: install_systemd.sh
systemd/: agent-slack-tmux-bridge.service  agent-telegram-tmux-bridge.service
tests/: test_bridge.py
