[project]
name = "herdr-telegram-slack-bridge"
version = "0.2.0"
description = "Bidirectional Telegram and Slack bot bridge for Herdr, Codex, and Claude agent sessions"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
herdr-telegram-slack-bridge = "agent_telegram_bridge.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
